--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Paywoo Bangking</title>
 </head>
 
 <body>
-    <main>
+    <main class="flex justify-center">
+
+        <!-- mobile feature start -->
+        <div class="mockup-phone h-[560px] bg-base-300 border-blue-950">
+            <div class="mockup-phone-camera"></div>
+            <div class="mockup-phone-display">
+                <!-- login form start -->
+                <div class=" mt-30 ">
+                    <div class="">
+
+                        <div class="card shrink-0 shadow-2xl">
+                            <div class="card-body">
+                                <fieldset class="fieldset">
+                                    <label class="label">Number</label>
+                                    <input id="input-number-form" type="number" class="input" placeholder="Number :" />
+                                    <label class="label">Pin</label>
+                                    <input id="input-pin-number" type="password" class="input" placeholder="Pin :" />
+                                    <div><a class="link link-hover">Forgot password?</a></div>
+                                    <button id="login-btn" class="btn btn-neutral mt-4">Login</button>
+                                </fieldset>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- login form end -->
+            </div>
+        </div>
+        <!-- mobile feature end -->
+
 
     </main>
     <script src="js/home.js"></script>
