again few added

--- a/home.html
+++ b/home.html
@@ -70,8 +70,9 @@
                         <div class="card shrink-0 shadow-2xl">
                             <div class="card-body">
                                 <fieldset class="fieldset">
-                                    <label class="label">Get Bonus</label>
-                                    <input id="bonus-amount-form" type="text" class="input" placeholder="Number :" />
+                                    <label class="label">Enter Bonus Coupon:</label>
+                                    <input id="bonus-amount-form" type="text" class="input"
+                                        placeholder="Enter your coupon:" />
 
                                     <label class="label">Pin</label>
                                     <input id="bonus-input-pin-number" type="password" class="input"
@@ -141,12 +142,13 @@
                         <div class="card shrink-0 shadow-2xl">
                             <div class="card-body">
                                 <fieldset class="fieldset">
-                                    <label class="label">PayBill</label>
-                                    <input id="paybill-amount-form" type="text" class="input" placeholder="Tk Amount" />
+                                    <label class="label">Amount to Pay</label>
+                                    <input id="paybill-amount-form" type="text" class="input"
+                                        placeholder="Enter Amount to pay" />
 
-                                    <label class="label">Pin</label>
+                                    <label class="label">Pin number</label>
                                     <input id="payBill-input-pin-number" type="password" class="input"
-                                        placeholder="Pin :" />
+                                        placeholder="Enter pin number:" />
 
                                     <div><a class="link link-hover">Forgot password?</a></div>
                                     <button id="payBill-amount-btn" class="btn btn-neutral mt-4">PayBill</button>
